# Vanguardian

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT.md  Dockerfile  Makefile  README.md  api_views_permissions.csv  djlint.toml  manage.py  permissions.csv  pyproject.toml  ruff.toml
.agents/rules/: dependency_rules_edc.md  subject_status_rules_edc.md
.agents/skills/: architecture-review.md  feature-scaffold.md
.github/: AGENTS.md  CODEOWNERS
.github/workflows/: ci.yml  codeql-analysis.yml  main-source-branch-policy.yml
db/: AGENT.md  dbdiagram.dbml
db/migrations/: 20260321_identity_auth_foundation.sql  20260322_identity_role_authorization.sql  20260326_identity_user_phone_number.sql  20260326_identity_user_unique_email_phone_number.sql  20260329_audit_auditevent_foundation.sql  20260331_study_study_foundation.sql  20260331_study_study_indexes.sql  20260331_study_study_site_foundation.sql  20260401_study_membership_foundation.sql  20260404_crf_foundation.sql  20260404_identity_user_deleted_soft_delete.sql  20260406_study_eventdefinition_foundation.sql  20260408_study_eventformbinding_foundation.sql  20260410_identity_user_attempt_login.sql  20260410_study_randomization_foundation.sql  20260412_study_subject_foundation.sql  20260413_study_event_transition_rule.sql  20260414_crf_multilingual_parler.sql  20260415_study_subject_current_sequence.sql  20260416_study_subject_code_format_padding_3.sql  20260416_study_subject_screening_subject_nullable.sql  (+22 more)
docker/: docker-compose.yml
docker/sonic/: sonic.cfg
docs/: db-first-migrate-guide.md  folder-tree.md  research-outline.md
src/: .env.tpl  AGENT.md  Dockerfile  entrypoint.sh  package-lock.json  package.json
tests/: test_services.py
tools/: flake8_ddd.py  flake8_django.py
(+933 files in other folders)
