[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanguardian"
version = "0.1.0"
description = "Vanguardian clinical trial management platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.1,<6.1",
  "django-environ>=0.11,<0.12",
  "djangorestframework>=3.15,<3.16",
  "django-filter>=24.2,<25",
  "drf-spectacular[sidecar]>=0.27,<0.28",
  "mysqlclient>=2.2.1,<3",
  "pymemcache>=4.0,<5",
]

[project.optional-dependencies]
dev = [
  "ipython>=8.26,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["Vanguardian*", "apps*"]
