[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanguardian"
version = "0.1.0"
description = "Vanguardian clinical trial management platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "Django>=5.1,<6.1",
  "aiosmtplib>=4.0,<6",
  "asonic>=2.0.0,<3",
  "django-environ>=0.11,<0.12",
  "djangorestframework>=3.15,<3.16",
  "django-filter>=24.2,<25",
  "django-parler>=2.3,<3",
  "django-tables2>=2.8,<2.9",
  "drf-spectacular[sidecar]>=0.27,<0.28",
  "jsonpath-ng>=1.7,<2",
  "mysqlclient>=2.2.1,<3",
  "pymemcache>=4.0,<5",
  "openpyxl>=3.1,<3.2",
  "phonenumbers>=9.0,<10",
  "uvicorn>=0.34,<1",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "ipython>=8.26,<9",
  "ruff>=0.11,<1",
  "djlint>=1.36",
  "flake8>=7.3.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["Vanguardian*", "apps*"]
